k8s/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: hello-world-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-world-service
          servicePort: 80
    host: hw.anarjafarov.me
